--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             </form>
             <ul class="to-do-list__items" class="to-do-list-items__container">
                 <li class="to-do-list__items__item">
-                    <input type="checkbox">
+                    <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Do this</p>  
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
                     <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
                 </li> 
                 <li class="to-do-list__items__item">
-                    <input type="checkbox">
+                    <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Do this</p> 
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
                     <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
                 </li>
                 <li class="to-do-list__items__item">
-                    <input type="checkbox">
+                    <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Done this</p> 
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
                     <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
                 </li>
                 <li class="to-do-list__items__item">
-                    <input type="checkbox">
+                    <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Done this</p> 
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
                     <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
