resized checkboxes, added --pending --done modifier to to-do-list__items__item

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                 
             </form>
             <ul class="to-do-list__items" class="to-do-list-items__container">
-                <li class="to-do-list__items__item">
+                <li class="to-do-list__items__item to-do-list__items__item--pending">
                     <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Do this</p>  
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
                     <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
                 </li> 
-                <li class="to-do-list__items__item">
+                <li class="to-do-list__items__item to-do-list__items__item--pending">
                     <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Do this</p> 
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
                     <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
                 </li>
-                <li class="to-do-list__items__item">
+                <li class="to-do-list__items__item to-do-list__items__item--done">
                     <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Done this</p> 
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
                     <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
                 </li>
-                <li class="to-do-list__items__item">
+                <li class="to-do-list__items__item to-do-list__items__item--done">
                     <input class="to-do-list__items__item__checkbox" type="checkbox">
                     <p class="to-do-list__items__item__text">Done this</p> 
                     <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
