Input field functional, adds to the to do list, prevented checkbox from flex shrink

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section class="to-do-list">
-            <form class="to-do-list__input">
+            <form class="to-do-list__input" method="POST">
                 <input type="text" name="to-do-list__input" id="to-do-list__input" placeholder="Add a Task...">
                 <button type="submit" class="to-do-list__input__add">
                     <i class="fas fa-plus"></i>
