Clear All button deletes all items, removed test HTML

--- a/index.html
+++ b/index.html
@@ -19,32 +19,7 @@
                 </button>
                 
             </form>
-            <ul class="to-do-list__items" class="to-do-list-items__container">
-                <li class="to-do-list__items__item">
-                    <input class="to-do-list__items__item__checkbox" type="checkbox">
-                    <p class="to-do-list__items__item__text">Do this</p>  
-                    <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
-                    <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
-                </li> 
-                <li class="to-do-list__items__item">
-                    <input class="to-do-list__items__item__checkbox" type="checkbox">
-                    <p class="to-do-list__items__item__text">Do this</p> 
-                    <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
-                    <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
-                </li>
-                <li class="to-do-list__items__item to-do-list__items__item--done">
-                    <input class="to-do-list__items__item__checkbox" type="checkbox">
-                    <p class="to-do-list__items__item__text">Done this</p> 
-                    <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
-                    <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
-                </li>
-                <li class="to-do-list__items__item to-do-list__items__item--done">
-                    <input class="to-do-list__items__item__checkbox" type="checkbox">
-                    <p class="to-do-list__items__item__text">Done this</p> 
-                    <button class="to-do-list__items__item__edit"><i class="fas fa-edit"></i></button>
-                    <button class="to-do-list__items__item__delete"><i class="fas fa-times"></i></button>
-                </li>
-            </ul>
+            <ul class="to-do-list__items" class="to-do-list-items__container"></ul>
             <button class="to-do-list__clear-all">Clear All</button>
         </section>
     </main>
